--- a/HelloWPF/HelloWPF/MainWindow.xaml
+++ b/HelloWPF/HelloWPF/MainWindow.xaml
@@ -6,6 +6,19 @@
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
             Hello WPF!
         </TextBlock>
-        <Button FontWeight="Bold" Content="A button" Width="117" Height="50" Margin="0,150,0,0"  />
+        <!--<Button FontWeight="Bold" Content="A button" Width="120" Height="50" Margin="0,150,0,0"  />-->
+        <Button>
+            <Button.FontWeight>Bold</Button.FontWeight>
+            <Button.Content>
+                <WrapPanel>
+                    <TextBlock Foreground="Blue">Multi</TextBlock>
+                    <TextBlock Foreground="Red">Color</TextBlock>
+                    <TextBlock>Button</TextBlock>
+                </WrapPanel>
+            </Button.Content>
+            <Button.Width>120</Button.Width>
+            <Button.Height>50</Button.Height>
+            <Button.Margin>0,150,0,0</Button.Margin>
+        </Button>
     </Grid>
 </Window>
