--- a/HelloWPF/HelloWPF/MainWindow.xaml
+++ b/HelloWPF/HelloWPF/MainWindow.xaml
@@ -7,18 +7,12 @@
             Hello WPF!
         </TextBlock>
         <!--<Button FontWeight="Bold" Content="A button" Width="120" Height="50" Margin="0,150,0,0"  />-->
-        <Button>
-            <Button.FontWeight>Bold</Button.FontWeight>
-            <Button.Content>
+        <Button FontWeight="Bold"  Width="120" Height="50" Margin="0,150,0,0">
                 <WrapPanel>
                     <TextBlock Foreground="Blue">Multi</TextBlock>
                     <TextBlock Foreground="Red">Color</TextBlock>
                     <TextBlock>Button</TextBlock>
                 </WrapPanel>
-            </Button.Content>
-            <Button.Width>120</Button.Width>
-            <Button.Height>50</Button.Height>
-            <Button.Margin>0,150,0,0</Button.Margin>
         </Button>
     </Grid>
 </Window>
