--- a/HelloWPF/HelloWPF/MainWindow.xaml
+++ b/HelloWPF/HelloWPF/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="720" Width="1280" MinWidth="520" MinHeight="293">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
+        <TextBlock x:Name="szoveg" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
             Hello WPF!
         </TextBlock>
         <!--<Button FontWeight="Bold" Content="A button" Width="120" Height="50" Margin="0,150,0,0"  />-->
-        <Button FontWeight="Bold"  Width="120" Height="50" Margin="0,150,0,0">
+        <Button x:Name="gomb" FontWeight="Bold"  Width="120" Height="50" Margin="0,150,0,0" Click="Button_Click">
                 <WrapPanel>
                     <TextBlock Foreground="Blue">Multi</TextBlock>
                     <TextBlock Foreground="Red">Color</TextBlock>
